--- a/style.css
+++ b/style.css
@@ -1,28 +1,86 @@
-ul {
-    list-style-type: none;
-    padding: 0;
+body {
+  font-family: 'Arial', sans-serif;
+  background-color: #f0f0f0;
+  margin: 0;
+  padding: 0;
 }
 
-li {
-    padding: 10px;
-    margin-bottom: 5px;
-    transition: background-color 0.3s;
+.container {
+  max-width: 800px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-li:hover {
-    background-color: #ddd;
+.create-task-block,
+.filter-task-block {
+  margin-bottom: 10px;
+  padding: 10px;
 }
 
-.delete-item:hover{
-    color: #ff0000
+.create-task-form,
+.filter-task-block {
+  text-align: center;
 }
-.edit-item:hover{
-    color: #008000
+
+.task-title {
+  color: #333;
 }
 
 .input-field {
-    margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
-.task-title{
-    font-size: 25px;}
+.task-input,
+.filter-input {
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+}
+
+.btn,
+.clear-tasks {
+  background-color: #4c9baf;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 5px;
+  cursor: pointer;
+}
+
+.btn:hover,
+.clear-tasks:hover {
+  background-color: #455aa0;
+}
+
+.collection {
+  list-style: none;
+  padding: 0;
+}
+
+.collection-item {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border-bottom: 1px solid #ccc;
+}
+
+.delete-item,
+.edit-item {
+  cursor: pointer;
+  margin-left: 5px;
+}
+
+.delete-item:hover{
+  color: #ff0000
+}
+
+.edit-item:hover{
+  color: #008000
+}
